2008-02-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createIvalStruct): fixed bug 1466761

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/xa51/spec.mk:
	  added CFLAGS when compiling timeout

2008-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bugs-1596270-1736867.c: Regression test for #1596270, #1736867

2008-02-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCClrange.c (findPrevUse): fixed bug 1888147
	* support/regression/tests/bug1888147.c: new, added

2008-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: fixed bugs #1596270, #1736867

2008-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: fixed bug in register pair loading when swapping register contents,
	  mostly fixes #1596270

2008-02-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph.def,
	* src/z80/peeph-z80.def: moved peephole that breaks gbz80 to z80-specific peepholes,
	  fixes #1806565

2008-02-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (operandBaseName): added check for @Ri
	* src/mcs51/peeph.def (rule 177.c): added operandsNotRelated(%1 %3)
	  fixes bug 1739475, thanks Robert Larice
	  (rule 271): new, added

2008-02-18 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/s51.src/Makefile.in: fixed error made in previous commit

2008-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): emit -z when using --debug for z80

2008-02-17 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c,
	* src/pic16/gen.c,
	* src/pic16/gen.h,
	* src/pic16/genutils.c: removed unused legacy code,